# winget-auto-upgrade

./: .gitlab-ci.yml  .version.yml  Cargo.toml  README.md  WAU-COMPARISON.md  p.py
examples/: allow_list.toml  block_list.toml  config.toml  override_list.toml
src/: config.rs  hook.rs  logging.rs  main.rs  notification.rs  package_list.rs  package_manager.rs  system.rs  updater.rs
tests/: integration.rs
windows/: ci-build.ps1  msi-actions.ps1  update.py  winget-auto-upgrade.wxs
winget-stub/: a  w-list.txt  w-upgrade-p.txt
