[package]
name = "winget-autoupgrade"
version = "0.1.0"
edition = "2024"
authors = ["Adam Schubert <adam.schubert@sg1-game.net>"]
description = "Winget auto-updater"
license = "GPL"
repository = "https://github.com/Salamek/winget-autoupgrade"

[dependencies]
# Logging
log = "0.4"
log4rs = { version = "1.3", features = [
    "console_appender",
    "rolling_file_appender",
    "compound_policy",
    "fixed_window_roller",
    "size_trigger",
    "pattern_encoder",
]}

# CLI execution
anyhow = "1.0"            # error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.7"
reqwest = { version = "0.12", features = ["blocking"] }

# Optional: command-line parsing if you want arguments
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.48", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Networking_Connectivity",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]}

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "2.1"
